.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
17:01:23 **** Incremental Build of configuration Debug for project AssignmentProject ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/pedestrian_light.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103xB -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/pedestrian_light.d" -MT"Core/Src/pedestrian_light.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/pedestrian_light.o"
arm-none-eabi-gcc -o "AssignmentProject.elf" @"objects.list"   -mcpu=cortex-m3 -T"E:\Files\Flexible\Microcotroller- Microprocessor\LAB\Project\AssignmentProject\STM32F103RBTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="AssignmentProject.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: AssignmentProject.elf
 
arm-none-eabi-size   AssignmentProject.elf 
arm-none-eabi-objdump -h -S  AssignmentProject.elf  > "AssignmentProject.list"
arm-none-eabi-objcopy  -O binary  AssignmentProject.elf  "AssignmentProject.bin"
   text	   data	    bss	    dec	    hex	filename
  16596	    116	   1868	  18580	   4894	AssignmentProject.elf
Finished building: default.size.stdout
 
Finished building: AssignmentProject.bin
 
Finished building: AssignmentProject.list
 
17:01:38 **** Incremental Build of configuration Debug for project AssignmentProject ****
make -j8 all 
arm-none-eabi-size   AssignmentProject.elf 
   text	   data	    bss	    dec	    hex	filename
  16596	    116	   1868	  18580	   4894	AssignmentProject.elf
Finished building: default.size.stdout
 
17:03:13 **** Incremental Build of configuration Debug for project AssignmentProject ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/buzzer.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103xB -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/buzzer.d" -MT"Core/Src/buzzer.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/buzzer.o"
arm-none-eabi-gcc "../Core/Src/pedestrian_light.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103xB -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/pedestrian_light.d" -MT"Core/Src/pedestrian_light.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/pedestrian_light.o"
../Core/Src/pedestrian_light.c: In function 'pedes_light_fsm':
../Core/Src/pedestrian_light.c:16:3: error: 'dutycle' undeclared (first use in this function)
   16 |   dutycle = 5;
      |   ^~~~~~~
../Core/Src/pedestrian_light.c:16:3: note: each undeclared identifier is reported only once for each function it appears in
make: *** [Core/Src/subdir.mk:64: Core/Src/pedestrian_light.o] Error 1
make: *** Waiting for unfinished jobs....
"make -j8 all" terminated with exit code 2. Build might be incomplete.
17:03:29 **** Incremental Build of configuration Debug for project AssignmentProject ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/pedestrian_light.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103xB -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/pedestrian_light.d" -MT"Core/Src/pedestrian_light.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/pedestrian_light.o"
arm-none-eabi-gcc -o "AssignmentProject.elf" @"objects.list"   -mcpu=cortex-m3 -T"E:\Files\Flexible\Microcotroller- Microprocessor\LAB\Project\AssignmentProject\STM32F103RBTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="AssignmentProject.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: AssignmentProject.elf
 
arm-none-eabi-size   AssignmentProject.elf 
arm-none-eabi-objdump -h -S  AssignmentProject.elf  > "AssignmentProject.list"
arm-none-eabi-objcopy  -O binary  AssignmentProject.elf  "AssignmentProject.bin"
   text	   data	    bss	    dec	    hex	filename
  16420	    112	   1864	  18396	   47dc	AssignmentProject.elf
Finished building: default.size.stdout
 
Finished building: AssignmentProject.bin
 
Finished building: AssignmentProject.list
 
17:06:24 **** Incremental Build of configuration Debug for project AssignmentProject ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/pedestrian_light.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103xB -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/pedestrian_light.d" -MT"Core/Src/pedestrian_light.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/pedestrian_light.o"
arm-none-eabi-gcc -o "AssignmentProject.elf" @"objects.list"   -mcpu=cortex-m3 -T"E:\Files\Flexible\Microcotroller- Microprocessor\LAB\Project\AssignmentProject\STM32F103RBTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="AssignmentProject.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: AssignmentProject.elf
 
arm-none-eabi-size   AssignmentProject.elf 
arm-none-eabi-objdump -h -S  AssignmentProject.elf  > "AssignmentProject.list"
arm-none-eabi-objcopy  -O binary  AssignmentProject.elf  "AssignmentProject.bin"
   text	   data	    bss	    dec	    hex	filename
  16428	    112	   1864	  18404	   47e4	AssignmentProject.elf
Finished building: default.size.stdout
 
Finished building: AssignmentProject.bin
 
Finished building: AssignmentProject.list
 
